# brain-cell-orchestration

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.builder  README.md  package.json  test.sh
.github/workflows/: ci.yml
apps/bco/: Cargo.toml
apps/bco/src/: main.rs
crates/bco-core/: Cargo.toml
crates/bco-core/src/: lib.rs
crates/bco-harness/: Cargo.toml
crates/bco-harness/src/: lib.rs
crates/bco-orchestrator/: Cargo.toml
crates/bco-orchestrator/src/: lib.rs
crates/bco-session/: Cargo.toml
crates/bco-session/src/: lib.rs
crates/bco-tui/: Cargo.toml
crates/bco-tui/src/: lib.rs  renderer.rs
docs/: ARCHITECTURE.md  IMPLEMENTATION_CHECKLIST.md  PLAN.md  README.md  REFERENCE_ANALYSIS.md  ROADMAP.md  RUNBOOK.md
docs/architecture/: ARCHITECTURE.md
docs/philosophy/: PHILOSOPHY.md
docs/planning/: PLAN.md
docs/research/: REFERENCE_ANALYSIS.md
