[workspace]
members = [
    "apps/bco",
    "crates/bco-core",
    "crates/bco-harness",
    "crates/bco-orchestrator",
    "crates/bco-session",
    "crates/bco-tui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["pf"]
repository = "https://github.com/agnusdei1207/brain-cell-orchestration"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[workspace.dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.26"
crossterm = "0.27"

