[package]
name = "bco-orchestrator"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bco-core = { path = "../bco-core" }
bco-harness = { path = "../bco-harness" }
bco-session = { path = "../bco-session" }
bco-tui = { path = "../bco-tui" }
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true

